# Toshi

./: Cargo.toml
ci/: coverage.sh
src/: commit.rs  handle.rs  index.rs  router.rs  settings.rs  shutdown.rs  utils.rs
src/cluster/: consul.rs  mod.rs  node.rs  remote_handle.rs  rpc_server.rs
src/error/: mod.rs
src/handlers/: bulk.rs  index.rs  mod.rs  root.rs  search.rs  summary.rs
toshi-proto/: Cargo.toml  build.rs
toshi-proto/proto/: cluster.proto
toshi-proto/src/: lib.rs
toshi-test/: Cargo.toml
toshi-test/src/: server.rs  test.rs
