[package]
name    = "toshi-test"
version = "0.1.0"
authors = ["Stephen Carman <shcarman@gmail.com>"]
description = "A full text search engine based on Tantivy"
repository = "https://github.com/toshi-search/Toshi"
license = "MIT"
edition = "2018"

[dependencies]
hyper = "^0.13.0-alpha"
http = "^0.1"
futures-preview = "0.3.0-alpha"
async-trait = "0.1.13"
tokio = "^0.2.0-alpha"
failure = "^0.1"
tracing = "^0.1"